general bug fixes

--- a/Vocabulous/src/practiceunit-page.html
+++ b/Vocabulous/src/practiceunit-page.html
@@ -112,6 +112,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 30px;
         margin-left: 0%;
         margin-top: 80px;
+        /*color: var(--modeCheckColor);*/
       }
       paper-button.skipbutton{
         font-size: 0.75em;
