--- a/Vocabulous/src/browse-unit.html
+++ b/Vocabulous/src/browse-unit.html
@@ -53,6 +53,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-bottom: 3px;
         display: block;
       }
+      #unitname{
+        margin-top: 2.5px;
+        font-weight: 400;
+      }
+      #username{
+        margin-top: -40px;
+        margin-right: 100px;
+        text-align: right;
+      }
       h1{
         color:  var(--headlineCard);
         margin-left: 40px;
@@ -108,7 +117,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --iron-icon-width: 25px;
         --iron-icon-height: 25px;
         float:right;
-        margin-top: 6px;
+        margin-top: -37.5px;
         --paper-checkbox-unchecked-color: var(--secondaryFontColorCard);
         --paper-checkbox-checked-color: green;
         --paper-checkbox-checked-ink-color: green;
