--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -84,10 +84,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-top: 40px;
         margin-left: 40px;
         width: 300px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -97,10 +99,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        margin-top: 40px;
        margin-left: 200px;
        width: 300px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -109,10 +113,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       paper-input.email{
         margin-left: 40px;
         width: 300px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -127,10 +133,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       paper-input.birthDate{
         width: 300px;
         margin-left: 40px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -142,10 +150,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 300px;
         margin-left: 40px;
         margin-top: 30px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -155,10 +165,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 300px;
         margin-left: 200px;
         margin-top: 40px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -192,7 +204,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: var(--hover-color);
         color: var(--secondaryFontColorCard);
       }
-
+      #save{
+        margin-left: 0px;
+        margin-top: 10px;
+        color: var(--headlineCard);
+      }
+      paper-input.input{
+        width: 100%;
+        color:var(--secondaryFontColorCard);
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
+      }
     </style>
       <div class="card">
           <h1>Account</h1>
@@ -231,7 +260,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>Password</h2>
         <div>
             <paper-input class="input" name="newPassword" label="Enter new Password again" error-message="Wrong input! Please try again" type="password"></paper-input>
-            <paper-button id="save" name="changePassword" raised noink>Change Password</paper-button>
+            <paper-button id="save" name="changePassword">Change Password</paper-button>
         </div>
       </paper-dialog>
   </template>
