--- a/Vocabulous/src/settings-view.html
+++ b/Vocabulous/src/settings-view.html
@@ -287,6 +287,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-dropdown-menu-color:var(--cardBackgroundcolor);
         --secondary-text-color:var(--secondaryFontColorCard);
         --primary-text-color:var(--secondaryFontColorCard);
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
       }
       paper-item{
         color:var(--secondaryFontColorCard);
@@ -296,12 +305,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 40px;
         width: 300px;
         margin-top: 0px;
-        --paper-input-container-underline:{
-          border: var(--app-secondary-color);
-        }
-        --paper-input-container-underline-focus:{
-          border: var(--app-secondary-color);
-        }
+        color:var(--secondaryFontColorCard);
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
       }
       div.colorview{
         width: 15px;
