paper-input theme bug fixed

--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -84,6 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-top: 40px;
         margin-left: 40px;
         width: 300px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
@@ -98,6 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        margin-top: 40px;
        margin-left: 200px;
        width: 300px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
@@ -111,6 +113,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       paper-input.email{
         margin-left: 40px;
         width: 300px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
@@ -130,6 +133,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       paper-input.birthDate{
         width: 300px;
         margin-left: 40px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
@@ -146,6 +150,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 300px;
         margin-left: 40px;
         margin-top: 30px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
@@ -160,6 +165,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 300px;
         margin-left: 200px;
         margin-top: 40px;
+        color:var(--secondaryFontColorCard);
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
