--- a/Vocabulous/src/settings-view.html
+++ b/Vocabulous/src/settings-view.html
@@ -305,6 +305,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 40px;
         width: 300px;
         margin-top: 0px;
+        color:var(--secondaryFontColorCard);
+        --paper-input-container-input-color: var(--secondaryFontColorCard);
         --paper-input-container-underline: {
           display: none;
         };
