--- a/Vocabulous/src/practiceunit-page.html
+++ b/Vocabulous/src/practiceunit-page.html
@@ -70,6 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           margin-top: -72.5px;
           margin-left: 40%;
           width: 25%;
+          color:var(--secondaryFontColorCard);
           display: block;
           outline: inherit;
           outline-color:  var(--secondaryFontColorCard);
