--- a/old/src/statistics-view.html
+++ b/old/src/statistics-view.html
@@ -50,12 +50,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-dropdown-menu-color:var(--cardBackgroundcolor);
         --secondary-text-color:var(--secondaryFontColorCard);
         --primary-text-color:var(--secondaryFontColorCard);
-        --paper-input-container-underline:{
-          border: var(--app-secondary-color);
-        }
-        --paper-input-container-underline-focus:{
-          border: var(--app-secondary-color);
-        }
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
       }
     </style>
 
