--- a/old/src/unit-overview.html
+++ b/old/src/unit-overview.html
@@ -67,6 +67,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-bottom: 3px;
         display: block;
       }
+      p{
+        margin-top: 2.5px;
+        font-weight: 400;
+      }
       paper-button.translate{
         font-size: 0.65em;
         width: 10%;
@@ -82,7 +86,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --iron-icon-width: 25px;
         --iron-icon-height: 25px;
         float:right;
-        margin-top: -5px;
+        margin-top: -47.5px;
       }
       paper-icon-button.trash:hover{
         color: red;
@@ -97,7 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 13%;
         height: 30px;
         margin-left: 85%;
-        color:var(--secondaryFontColorCard);
+        color: var(--secondaryFontColorCard);
       }
       #confirm{
         border-radius: 5px;
