--- a/Vocabulous/src/settings-view.html
+++ b/Vocabulous/src/settings-view.html
@@ -281,10 +281,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       paper-dropdown-menu{
         margin-left: 120px;
         margin-top: -30px;
-        width: 65%;
-        --disabled-text-color:var(--secondaryFontColorCard);
-        -webkit-tap-highlight-color:var(--cardBackgroundcolor);
-        --paper-dropdown-menu-color:var(--cardBackgroundcolor);
+        width: 65%; 
+        --disabled-text-color: var(--secondaryFontColorCard);
+        -webkit-tap-highlight-color: var(--cardBackgroundcolor);
+        --paper-dropdown-menu-color: var(--cardBackgroundcolor);
         --secondary-text-color:var(--secondaryFontColorCard);
         --primary-text-color:var(--secondaryFontColorCard);
         --paper-input-container-underline: {
@@ -306,6 +306,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 300px;
         margin-top: 0px;
         color:var(--secondaryFontColorCard);
+        --paper-input-container-input-color: var(--secondaryFontColorCard);
         --paper-input-container-underline: {
           display: none;
         };
