--- a/Vocabulous/src/create-unit.html
+++ b/Vocabulous/src/create-unit.html
@@ -66,7 +66,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 50px;
         width: 300px;
         margin-top: 20px;
-        color:var(--secondaryFontColorCard);
+        /*--paper-input-container-color: var(--secondaryFontColorCard); Label-COlor*/
+        --paper-input-container-input-color: var(--secondaryFontColorCard);
+        color: var(--secondaryFontColorCard);
         --paper-input-container-underline: {
           display: none;
         };
@@ -81,6 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 0px;
         width: 300px;
         color: var(--secondaryFontColorCard);
+        --paper-input-container-input-color: var(--secondaryFontColorCard);
         margin-top: -5px;
         --paper-input-container-underline: {
           display: none;
@@ -96,6 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 50%;
         width: 300px;
         color: var(--secondaryFontColorCard);
+        --paper-input-container-input-color: var(--secondaryFontColorCard);
         margin-top: -40px;
         --paper-input-container-underline: {
           display: none;
