--- a/Vocabulous/src/selfcheck-page.html
+++ b/Vocabulous/src/selfcheck-page.html
@@ -19,6 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="../bower_components/time-counter/time-counter.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="my-icons.html">
@@ -72,6 +73,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-focus-color: var(--secondaryFontColorCard);
         --paper-input-container-invalid-color: var(--secondaryFontColorCard);
         --paper-input-container-input-color: var(--secondaryFontColorCard);
+        --paper-input-container-underline: {
+          border: 1px solid var(--secondaryFontColorCard);
+        }
       }
       paper-toggle-button.language{
         margin-left: 15px;
@@ -133,7 +137,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 0.9em;
         width: 200px;
         height: 30px;
-        /*margin-left: 83%;*/
         margin-top: 0px;
       }
       h3.unitprogress{
@@ -141,7 +144,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 0.9em;
         width: 200px;
         height: 30px;
-        /*margin-left: 83%;*/
         margin-top: 0px;
       }
       h2.timer{
@@ -173,27 +175,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-top: -80px;
         margin-left: 80%;
       }
-      #popuplanguage iron-icon.language{
-        display: none;
-      }
-      #popuplanguage{
-        position: absolute;
-        z-index: 1;
-        width: 500px;
-        background-color: rgba(134, 221, 255, 0.562);
-        color:black;
-        padding: 5px 0;
-        margin-top: 4.5%;
-      }
-      #popuplanguage::after{
-        content: "";
-        position: absolute;
-        bottom: 100%;
-        left: 48.5%;
-        margin-top: -4px;
-        border-width: 7px;
-        border-style: solid;
-        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
+      #infoLanguage, #infoNext{
+        width: 400px;
+        border-radius: 5px;
+        border-color: var(--secondaryFontColorCard);
+        background-color: var(--hover-color);
+        color: var(--secondaryFontColorCard);
       }
     </style>
 
@@ -206,6 +193,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <td><paper-toggle-button noink checked class="language"></paper-toggle-button></td>
           <td> <h3 class="english">English</h3></td>          
           <td><iron-icon icon="icons:info-outline" class="language"></iron-icon></td>
+          <paper-dialog id="infoLanguage">
+            <p>When you select "German" you will have to
+              write English words and vice versa.</p>
+          </paper-dialog>
           <div id="popuplanguage" name="languagePopup" style="display: none">When you select "German" you will have to
             write German words and when you select "English" you will have to write
             English words.</div>
@@ -280,6 +271,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getLanguagePupup(){
         return Polymer.dom(this.root).querySelector("div[name=languagePopup]");
+      }
+      _getPaperDialogLanguage(){
+        return Polymer.dom(this.root).querySelector("paper-dialog[id=infoLanguage]");
       }
       _getWordCount(){
         return Polymer.dom(this.root).querySelector("input[name=wordCount]");
