--- a/old/src/create-unit.html
+++ b/old/src/create-unit.html
@@ -10,13 +10,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/paper-input/paper-input-container.html">
 <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown.html">
-<link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-content.html">
-<link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-menu.html">
-<link rel="import" href="../bower_components/d2l-menu/d2l-menu-item.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
@@ -54,11 +51,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: var(--hover-color);
       }
       td{
-        border: 0.75px solid var(--secondaryFontColorCard);
+        border: 1px solid var(--secondaryFontColorCard);
         height: 30px;
         padding: 10px;
         text-align: left;
-        font-weight: 200;
+        font-weight: 400;
         margin-left: 40px;
         border-radius: 5px;
         margin-bottom: 3px;
@@ -69,43 +66,46 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 50px;
         width: 300px;
         margin-top: 20px;
-        --paper-input-container-underline:{
-          border: var(--app-secondary-color);
-        }
-        --paper-input-container-underline-focus:{
-          border: var(--app-secondary-color);
-        }
+        color:var(--secondaryFontColorCard);
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
       }
       paper-input.germanVocab{
         margin-left: 0px;
         width: 300px;
         color: var(--secondaryFontColorCard);
         margin-top: -5px;
-        --paper-input-container-underline:{
-          border: var(--app-secondary-color);
-        }
-        --paper-input-container-underline-focus:{
-          border: var(--app-secondary-color);
-        }
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
       }
       paper-input.englishVocab{
         margin-left: 50%;
         width: 300px;
         color: var(--secondaryFontColorCard);
         margin-top: -40px;
-        --paper-input-container-underline:{
-          border: var(--app-secondary-color);
-        }
-        --paper-input-container-underline-focus:{
-          border: var(--app-secondary-color);
-        }
-      }
-      paper-input{
-        color:var(--secondaryFontColorCard);
-        --paper-input-container-color: var(--secondaryFontColorCard);
-        --paper-input-container-focus-color: var(--secondaryFontColorCard);
-        --paper-input-container-invalid-color: var(--secondaryFontColorCard);
-        --paper-input-container-input-color: var(--secondaryFontColorCard);
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
       }
       paper-button.plus{
         width: 25px;
@@ -155,12 +155,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-bottom: 20px;
       }
       paper-button.save{
-        font-size: 0.65em;
+        font-size: 0.75em;
         margin-left: 40px;
-      }
-  
-      d2l-dropdown{
-        float:right;
+        height: 30px;
       }
       paper-icon-button.remove{
         color:grey;
@@ -177,16 +174,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
       <h1>Create Unit</h1>
       <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
-      <d2l-dropdown>
-          <paper-icon-button style="width: 45px;height: 45px;"class="d2l-dropdown-opener" name="menu" icon="icons:more-vert" noink></paper-icon-button>
-          <d2l-dropdown-menu>
-              <d2l-menu label="Menu">
-                <d2l-menu-item name="browseUnit" text="Browse Unit"></d2l-menu-item>
-                <d2l-menu-item name="uploadUnit" text="Upload Unit"></d2l-menu-item>
-              </d2l-menu>
-          </d2l-dropdown-menu>
-      </d2l-dropdown>
-
+      
       <paper-input class="unitName" label="Unit name" no-label-float></paper-input>
       <table id="vocabs">
         <tr><td><paper-input class="germanVocab" label="German word" no-label-float></paper-input><paper-input class="englishVocab" label="English word" no-label-float></paper-input><paper-icon-button class="remove" name="remove" icon="icons:clear" noink></paper-icon-button></td></tr>
@@ -217,12 +205,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getUnitNameInput(){
         return Polymer.dom(this.root).querySelector("paper-input[class=unitName]");
-      }
-      _getBrowseUnitButton(){
-        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=browseUnit]");
-      }
-      _getUploadUnitButton(){
-        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=uploadUnit]");
       }
     }
 
