--- a/old/src/my-app.html
+++ b/old/src/my-app.html
@@ -51,8 +51,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --cardBackgroundcolor: #fff;
         --cardFontColor: #757575;
         --headlineCard: #212121;
-        --secondaryFontColorCard:#A4A4A4;
+        --secondaryFontColorCard:#777777;
         --hover-color: #f2f2f2;
+        --modeCheckColor: #212121;
         display: block;
       }
 
