--- a/old/src/unit-overview.html
+++ b/old/src/unit-overview.html
@@ -56,23 +56,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: var(--hover-color);
       }
       td{
-        border: 0.75px solid var(--secondaryFontColorCard);
+        border: 1px solid var(--secondaryFontColorCard);
         height: 30px;
         padding: 10px;
         text-align: left;
-        font-weight: 200;
+        font-weight: 400;
         margin-left: 40px;
         color:var(--secondaryFontColorCard);
         border-radius: 5px;
         margin-bottom: 3px;
         display: block;
       }
-      paper-button.newUnit{
-        font-size: 0.65em;
-        margin-top: -50px;
-        width: 12%;
-        height: 30px;
-        margin-left: 76%;
+      p{
+        margin-top: 2.5px;
+        font-weight: 400;
       }
       paper-button.translate{
         font-size: 0.65em;
@@ -89,16 +86,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --iron-icon-width: 25px;
         --iron-icon-height: 25px;
         float:right;
-        margin-top: -5px;
+        margin-top: -47.5px;
       }
       paper-icon-button.trash:hover{
         color: red;
       }
       paper-button.confirmButtons{
+        color: var(--headlineCard);
+      }
+      
+      paper-button.newUnit{
+        font-size: 0.75em;
+        margin-bottom: -200px;
+        width: 13%;
+        height: 30px;
+        margin-left: 85%;
         color:var(--secondaryFontColorCard);
       }
       #confirm{
-        /*border: 2px solid;*/
         border-radius: 5px;
         border-color: var(--secondaryFontColorCard);
         background-color: var(--hover-color);
@@ -108,6 +113,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 45px;
         height: 45px;
         float:right;
+      }
+      #createnewunit{
+        padding-right: 5px;
       }
     </style>
     	
@@ -121,13 +129,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-button class="confirmButtons"name="yes">Yes</paper-button>
         </div>
       </paper-dialog>
-        <d2l-dropdown>
-          <paper-icon-button id="menu" class="d2l-dropdown-opener" name="menu" icon="icons:more-vert" noink></paper-icon-button>
-          <d2l-dropdown-menu>
-            <d2l-menu label="Menu">
-              <d2l-menu-item name="newUnit" text="Create New Unit"></d2l-menu-item>
-             <d2l-menu-item name="translate" text="Translate"></d2l-menu-item></d2l-menu>
-          </d2l-dropdown-menu>
+      <paper-button name="newUnit" class="newUnit"raised noink><iron-icon id="createnewunit" icon="icons:note-add"></iron-icon>Create New Unit</paper-button>
       </d2l-dropdown>
       <paper-search-bar search="{{search}}" loading="[[loading]]" hide-filter-button></paper-search-bar>
       <!--<paper-icon-button class="trash" name="trash" icon="vaadin:trash"></paper-icon-button>-->
@@ -154,10 +156,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return Polymer.dom(this.root).querySelector("input[name=forUnit]");
       }
       _getNewUnitButton(){
-        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=newUnit]");
-      }
-      _getTranslateButton(){
-        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=translate]");
+        return Polymer.dom(this.root).querySelector("paper-button[name=newUnit]");
       }
       _getPaperDialog(){
         return Polymer.dom(this.root).querySelector("paper-dialog[id=confirm]");
