--- a/old/src/unitresult-page.html
+++ b/old/src/unitresult-page.html
@@ -31,14 +31,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       h2{
         color: var(--app-primary-color);
-        margin-top: -25px;
-        margin-left: 25%;
+        margin-top: 0px;
+        margin-left: 0px;
         font-weight: 300;
         font-size: 18px;
       }
       google-chart {
         height: 300px;
         width: 50em;
+        color: var(--secondaryFontColorCard);
       }
       paper-icon-button.back{
         font-size: 0.65em;
@@ -62,10 +63,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
       <google-chart
         type='pie'
-        cols='[{"label":"Name", "type":"string"}, {"label":"Amount", "type":"number"}]'>
+        cols='[{"label":"Name", "type":"string"}, {"label":"Amount", "type":"number"}]'
+        >
       </google-chart>
       <paper-button class="wrongVocabels" name="wrongVocabels" noink raised>Try wrong Words again</paper-button>
-      <h2 class="timer">00:23:14</h2> <!-- benötigte Zeit ausgeben -->
+      <h2 class="timer">Attended Time: </h2> <!-- benötigte Zeit ausgeben -->
     </div>
   </template>
 
