--- a/Vocabulous/src/statistics-view.html
+++ b/Vocabulous/src/statistics-view.html
@@ -15,6 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
+<link rel="import" href="../bower_components/paper-slider/paper-slider.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="statistics-view">
@@ -66,17 +67,56 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       google-chart {
         height: 300px;
-        width: 60em;
+        width: 100%;
         color: var(--secondaryFontColorCard);
       }
       .column{
-        padding-right: 60em;
+        width: 900px;
+        margin: 0 auto;
+        margin-top: 5%;
       }
       .line{
-        padding-right: 60em;
+        width: 900px;
+        margin: 0 auto;
+        margin-top: 5%;
       }
       .pie{
-        padding-right: 60em;
+        width: 900px;
+        margin: 0 auto;
+        margin-top: 5%;
+      }
+      paper-slider.slide{
+        width: 20%;
+        margin-left: 300px;
+        margin-top: -40px;
+        color: var(--headlineCard);
+        --paper-slider-knob-color: var(--headlineCard);
+        --paper-slider-active-color: var(--headlineCard);
+        --paper-slider-knob-start-color: var(--headlineCard);
+        --paper-slider-pin-start-color: var(--headlineCard);
+        --paper-slider-knob-start-border-color: var(--headlineCard);
+        --paper-slider-markers-color: --paper-grey-400;
+        --paper-slider-marker:{
+          display: none;
+        }
+        --paper-slider-pin:{
+          display: none;
+        }
+      }
+      #sliderDay{
+        margin-left: 305px;
+        margin-top: -5px;
+        font-size: 0.80em;
+      }
+      #sliderWeek{
+        margin-left: 400px;
+        margin-top: -30px;
+        font-size: 0.80em;
+      }
+      #sliderMonth{
+        margin-left: 500px;
+        margin-top: -32.5px;
+        font-size: 0.80em;
       }
     </style>
 
@@ -87,6 +127,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-item>Units</paper-item>
         </paper-listbox>
       </paper-dropdown-menu>
+      <paper-slider class="slide" id="ratings" snaps max="2" step="1" value="1"></paper-slider>
+      <p id="sliderDay">Day</p>
+      <p id="sliderWeek">Week</p>
+      <p id="sliderMonth">Month</p>
       <paper-tabs selected="0" sticky>
         <paper-tab>Practice-Answer</paper-tab>
         <paper-tab>Practice-Memory</paper-tab>
@@ -96,8 +140,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <google-chart
           name="column"
           type='column'
-          options='{"title": "Distribution of days in 2001Q1"}'
-          cols='[{"label":"Days", "type":"string"},{"label":"Sessions", "type":"number"}]'
+          options='{"title": "Distribution of days in 2001Q1", "colors": "var(--secondaryFontColorCard)"}'
+          cols='[{"label":"Days", "type":"string"},{"label":"sessions", "type":"number"}]'
           rows='[["Mo",4],["Tu",5],["We",6],["Th",7],["Fr",8],["Sa",9],["So",6]]'>
         </google-chart>
       </div>
@@ -106,7 +150,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           name="line"
           type='line'
           options='{"title": "Distribution of days in 2001Q1"}'
-          cols='[{"label":"Day", "type":"string"},{"label":"Time\n needed\n in minutes", "type":"number"}]'
+          cols='[{"label":"Day", "type":"string"},{"label":"average\n min/day", "type":"number"}]'
           rows='[["Mo",4],["Tu",5],["We",6],["Th",7],["Fr",8],["Sa",9],["So",6]]'>
         </google-chart>
       </div>
@@ -148,6 +192,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getColumnChartDiv(){
         return Polymer.dom(this.root).querySelector("div[name=column]");
+      }
+      _getPaperSlide(){
+        return Polymer.dom(this.root).querySelector("paper-slider[class=slide]");
       }
     }
 
