--- a/old/src/my-app.html
+++ b/old/src/my-app.html
@@ -46,14 +46,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style>
       :host {
-        --app-primary-color: #00b4f0;
-        --app-secondary-color: black;
+        --app-primary-color: #fff;
+        --app-secondary-color: #fff;
         --cardBackgroundcolor: #fff;
-        --cardFontColor: #757575;
-        --headlineCard: #212121;
-        --secondaryFontColorCard:#777777;
-        --hover-color: #f2f2f2;
-        --modeCheckColor: #212121;
+        --cardFontColor: #fff;
+        --headlineCard: #fff;
+        --secondaryFontColorCard:#fff;
+        --hover-color: #fff;
+        --modeCheckColor: #fff;
         display: block;
       }
 
