--- a/old/src/overview-page.html
+++ b/old/src/overview-page.html
@@ -55,12 +55,12 @@
   <template>
     <style>
       :host {
-        --app-primary-color: #1E88E5;
-        --app-secondary-color: black;
+        --app-primary-color: #fff;
+        --app-secondary-color: #fff;
         --containercolor: #ffffff;
-        --navigationcolorbackground:#f2f2f2;
-        --itemcolor: black;
-        color:black;
+        --navigationcolorbackground:#fff;
+        --itemcolor: #fff;
+        color:#fff;
         display: block;
       }
 
@@ -150,8 +150,8 @@
         background-color: red;
         color: white;
       }
-      #homeview,#unitoverview,#statisticsview,#settingsview, #browseunits, #practiceAnswer, #selfcheck{
-        margin-top: 8px;
+      #homeview,#unitoverview,#statisticsview,#settingsview, #browseunits, #practiceAnswer, #selfcheck, #aboutview{
+        margin-top: 10px;
       }
       #toast5{
         background-color: green;
@@ -160,6 +160,12 @@
       #toast7{
         background-color: green;
         color: white;
+      }
+      a{
+        cursor: pointer;
+      }
+      #home{
+        color: var(--headlineCard);
       }
     </style>
 
@@ -176,8 +182,8 @@
     </app-route>
     <app-drawer-layout fullbleed force-narrow>
       <!-- Drawer content -->
-      <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
-            <app-toolbar style="font-weight:300"><a name="startpage"><span>Home</span></a></app-toolbar>
+      <app-drawer id="drawer" slot="drawer" force-narrow="true" swipe-open="[[narrow]]">
+            <app-toolbar id="home" style="font-weight:300"><a name="startpage"><span>Vocabulous</span></a></app-toolbar>
             <app-toolbar><paper-progress name="learn" value="250" min="0" max="800" class="green"></paper-progress></app-toolbar>
             <app-toolbar class="learnprogress">Learn Progress</app-toolbar>
             <iron-selector name="menu" selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
@@ -187,6 +193,7 @@
               <a name="selfcheck"><iron-icon id="selfcheck" icon="icons:assignment-turned-in"></iron-icon><span>Selfcheck</span></a>
               <a name="statistics-view"><iron-icon id="statisticsview" icon="editor:show-chart"></iron-icon><span>Statistics</span></a>
               <a name="settings-view"><iron-icon id="settingsview" icon="icons:settings"></iron-icon><span>Settings</span></a>
+              <a name="about-view"><iron-icon id="aboutview" icon="icons:info-outline"></iron-icon><span>About</span></a>
             </iron-selector>
         </app-drawer>
 
@@ -224,6 +231,7 @@
           <practice-overview name="practice-overview"></practice-overview>
           <practiceunit-page-selectionmode name="practiceunit-page-selectionmode"></practiceunit-page-selectionmode>
           <unit-overview-for-sessions name="unit-overview-for-sessions"></unit-overview-for-sessions>
+          <about-view name="about-view"></about-view>
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
@@ -286,6 +294,9 @@
       }
       _getBrowseUnitview(){
         return Polymer.dom(this.root).querySelector("a[name=browseUnits]");
+      }
+      _getAboutView(){
+        return Polymer.dom(this.root).querySelector("a[name=about-view]");
       }
       /*_getPracticeMemoryview(){
         return Polymer.dom(this.root).querySelector("a[name=practiceMemory]");
@@ -382,6 +393,9 @@
       }
       _getUnitResultPage(){
         return Polymer.dom(this.root).querySelector("unitresult-page[name=unitresult-page]");
+      }
+      _getMainTitle(){
+        return Polymer.dom(this.root).querySelector("div[class=maintitle]");
       }
       _pageChanged(page) {
         // Load page import on demand. Show 404 page if fails
