about page update + bugfix

--- a/Vocabulous/src/unit-overview.html
+++ b/Vocabulous/src/unit-overview.html
@@ -58,6 +58,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       td{
         border: 1px solid var(--secondaryFontColorCard);
         height: 30px;
+        cursor: pointer;
         padding: 10px;
         text-align: left;
         font-weight: 400;
