max wahl picture added

--- a/Vocabulous/src/about-view.html
+++ b/Vocabulous/src/about-view.html
@@ -188,7 +188,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   </div></div>
               <div class="column">
                   <div class="imgBox">
-                      <img src="../images/hiebl_bild.jpg"  height="468,5" width="312,5">
+                      <img src="../images/wahl_bild.jpg"  height="468,5" width="312,5">
                   </div>
                   <div class="details">
                       <h3>Maximilian Wahl<br><span>JavaEE</span></h3>
