--- a/Vocabulous/src/my-app.html
+++ b/Vocabulous/src/my-app.html
@@ -41,6 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="not-found.html">
 <link rel="lazy-import" href="register-login.html">
 <link rel="lazy-import" href="overview-page.html">
+<link rel="lazy-import" href="register-new.html">
 
 <dom-module id="my-app">
   <template>
@@ -102,6 +103,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <iron-pages selected="[[activePage]]" attr-for-selected="name" fallback-selection="not-found" role="main">
           <register-login name="register-login"></register-login>
+          <register-new name="register-new"></register-new>
           <overview-page name="overview-page"></overview-page>
         </iron-pages>
         <shared-style></shared-style>
@@ -152,6 +154,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       _showPage404() {
         this.activePage = 'not-found';
+      }
+      _getRegisterNew(){
+        return Polymer.dom(this.root).querySelector("register-new");
       }
       _getRegisterLogin(){
         return Polymer.dom(this.root).querySelector("register-login");
