--- a/old/src/home-view.html
+++ b/old/src/home-view.html
@@ -23,11 +23,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       h1{
         color:  var(--headlineCard);
       }
+      a{
+        cursor: pointer;
+        color:  var(--headlineCard);
+        text-decoration: none;
+      }
     </style>
 
     <div class="card"> 
       <h1>Home View</h1>
-      <p>Diese Seite gibt dem Schüler/Studenten einen guten Überblick. Die wichtigsten Informationen werden hier angezeigt.</p>
+      <p>Vocabulous is a software that can be used to practice English vocabulary.
+        The software offers you several options for practicing units so that you can prepare ideally for the next test. 
+        You can also create your own units or add units of friends to learn the vocabulary you really need. 
+        Vocabulous also gives you the ability to evaluate results of your sessions by displaying them in charts. 
+        To further increase the user-friendliness, you will be able to design the software with your own colors, making it easy to create your own themes.
+        This software was created using Polymer, Javascript and a Java EE server as backend.</p>
+        <p>
+        <a target="_blank" href="https://www.polymer-project.org/">Polymer</a> is open-source JavaScript library for building web applications using Web Components. 
+        The library is developed by Google developers and contributors on GitHub. Modern design principles are implemented as 
+        a separate project using Google's Material Design design principles. Polymer is used by Google Services and websites, 
+        including the redesigned YouTube, YouTube Gaming, the redesigned Google Earth, Google I / O websites, Google Play Music, 
+        Redesign of Google Sites and Allo for web.
+        </p>
+        <a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a> often abbreviated as JS, is a high-level, interpreted programming language. 
+        It is a language which is characterized as dynamic, weakly typed, prototype-based and multi-paradigm.
+        Alongside HTML and CSS, JavaScript is one of the three core technologies of the World Wide Web. 
+        JavaScript enables interactive web pages and thus is an essential part of web applications. 
+        The vast majority of websites use it, and all major web browsers have a dedicated JavaScript engine 
+        to execute it.
+        <p>
+        <a target="_blank" href="https://en.wikipedia.org/wiki/Java_Platform,_Enterprise_Edition">Java Platform, Enterprise Edition (Java EE), formerly Java 2 Platform, Enterprise Edition (J2EE), 
+        currently Jakarta EE</a>, is a set of specifications, extending Java SE with specifications for enterprise 
+        features as distributed computing and web services. Java EE applications are run on reference, 
+        that can be microservices or application servers, which handles transactions, security, scalability, 
+        concurrency and management of the components it is deploying.
+        Java EE is defined by its specification. 
+        The specification defines APIs and their interactions. Java EE compliant. Java compliant.</p>
     </div>
   </template>
 
